Added films implementation

--- a/app/src/main/res/layout/fragment_films.xml
+++ b/app/src/main/res/layout/fragment_films.xml
@@ -4,6 +4,9 @@
 
     <data>
 
+        <variable
+            name="onClickBackListener"
+            type="com.cralos.myapplicationmvvm.OnClickBack" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
